--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PepeMax</title>
 
     <!-- Styles -->
 
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <!-- Primary Meta Tags -->
+    <title>$PENNY</title>
+    <meta name="title" content="$PENNY">
+    <meta name="description" content="Penny a baddie, she gets what she want. No broke boys allowed.">
 
-    <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pennyerc.com/">
+    <meta property="og:title" content="$PENNY">
+    <meta property="og:description" content="Penny a baddie, she gets what she want. No broke boys allowed.">
+    <meta property="og:image" content="https://pennyerc.com/images/PENNYCOVER_META.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pennyerc.com/">
+    <meta property="twitter:title" content="$PENNY">
+    <meta property="twitter:description" content="Penny a baddie, she gets what she want. No broke boys allowed.">
+    <meta property="twitter:image" content="https://pennyerc.com/images/PENNYCOVER_META.png">
+
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
 
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -17,8 +33,8 @@
     <!-- end Styles -->
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="images/kermit_logo.png">
-    <link rel="apple-touch-icon-precomposed" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/Penny_logo.png">
+    <link rel="apple-touch-icon-precomposed" href="images/Penny_logo.png">
 
 </head>
 <body class="home-main">
