--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="col-12">
                     <img data-aos="flip-up" class="pie-chart" src="./images/PENNY_PIE.png">
                 </div>
-                <div class="col-xl-fifth col-xl-3 col-md-6">
+                <div class="col-xl-fifth col-xl-3 col-6">
                     <div class="speciality-box icons-box-special" data-aos="fade-up" data-aos-duration="2000">
                         <h5 class="title">Liquidity Pool</h5>
                         <div class="icon">
@@ -228,7 +228,7 @@
                         <!--<h3 class="number">01</h3>-->
                     </div>
                 </div>
-                <div class="col-xl-fifth col-xl-3 col-md-6">
+                <div class="col-xl-fifth col-xl-3 col-6">
                     <div class="speciality-box icons-box-special" data-aos="fade-up" data-aos-duration="2800">
                         <h5 class="title">CEX</h5>
                         <div class="icon">
@@ -238,7 +238,7 @@
                         <!--<h3 class="number">03</h3>-->
                     </div>
                 </div>
-                <div class="col-xl-fifth col-xl-3 col-md-6">
+                <div class="col-xl-fifth col-xl-3 col-6">
                     <div class="speciality-box icons-box-special" data-aos="fade-up" data-aos-duration="2400">
                         <h5 class="title">Buy/Sell Taxes</h5>
                         <div class="icon">
@@ -248,7 +248,7 @@
                         <!--<h3 class="number">02</h3>-->
                     </div>
                 </div>
-                <div class="col-xl-fifth col-xl-3 col-md-6">
+                <div class="col-xl-fifth col-xl-3 col-6">
                     <div class="speciality-box icons-box-special" data-aos="fade-up" data-aos-duration="3000">
                         <h5 class="title">Total Supply</h5>
                         <div class="icon">
